--- a/views/Home/index.ejs
+++ b/views/Home/index.ejs
@@ -99,7 +99,7 @@
                         </div>
                         <div>
                             <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Fechar</button>
-                            <button type="button" class="btn btn-primary">Confirmar</button>
+                            <button type="button " id="btnConfirmar" class="btn btn-primary">Confirmar</button>
                         </div>
                     </div>
                     </div>
