delete-from-ecommerce

--- a/views/Home/index.ejs
+++ b/views/Home/index.ejs
@@ -31,6 +31,9 @@
                         <div style="margin-left: 10px;">
                             <a class="btn btn-outline-dark" href="/admin"> <i class="bi bi-person-fill"></i> Login</a>
                         </div>
+                        <div style="margin-left: 10px;">
+                            <a class="btn btn-outline-dark" href="/produto"> <i class="bi bi-person-fill"></i> Produtos</a>
+                        </div>
                     </form>
                 </div>
             </div>
