--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -69,6 +69,14 @@
             </a>
           </li>
           <li class="nav-item menu-open">
+            <a href="/pedido" class="nav-link">
+              <i class="nav-icon fas fa-boxes"></i>
+              <p>
+                Pedidos
+              </p>
+            </a>
+          </li>
+          <li class="nav-item menu-open">
             <a href="/categorias" class="nav-link">
               <i class="nav-icon fas fa-list"></i>
               <p>
@@ -92,6 +100,7 @@
               </p>
             </a>
           </li>
+          
           <li class="nav-item menu-open">
             <a href="/perfis" class="nav-link">
               <i class="nav-icon fas fa-users"></i>
