--- a/views/Pedido/listar.ejs
+++ b/views/Pedido/listar.ejs
@@ -1,9 +1,20 @@
 <script src="/js/Pedido/listar.js"></script>
+<script src="https://cdn.sheetjs.com/xlsx-0.20.3/package/dist/xlsx.full.min.js"></script>
 <div>
     <h1>Pedidos</h1>
 
     <!--esqueleto da tabela para receber os dados pre montada com header body e so gera o tr e o td do corpo -->
-
+    <div>
+        <div class="form-group">
+            <label>Busca ( Nome do produto ou Nmr. Pedido)</label>
+            <input class="form-control" id="inputBusca" />
+        </div>
+        <div>
+            <button id="buscar" class="btn btn-primary"> <i class="fas fa-search"> Buscar</i></button>
+            <button class="btn btn-success" id="excel"><i class="fas fa-file"> Exportar para excel</i></button>
+        </div>
+    </div>
+    <br>
     <div class="table-responsive">
         <table id="pedidos" class="table table-striped">
             <thead>
